[package]
name = "websocket"
version = "0.1.0"
edition = "2021"

default-run = "websocket-server"

[[bin]]
name = "websocket-server"
path = "src/server.rs"

[[bin]]
name = "websocket-client"
path = "src/client_ws.rs"


[[bin]]
name = "http-client"
path = "src/client_http.rs"


[dependencies]
actix-web = "4"
actix = "0.13"
actix-http = "3"
actix-web-actors = "4"
actix-codec = "0.5"
awc = "3.0.0-beta.21"
tokio-stream = "0.1"
tokio = { version = "1.13.1", features = ["full"] }
#tokio = { version = "1", features = ["io-util", "sync"] }
#actix-multipart = "0.3"
actix-files = "0.6"
futures = "0.3"
sanitize-filename = "0.4"
actix-service = "2.0"
bytes = "1"
env_logger = "0.9"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
bytestring = "1"
futures-util = "0.3"

# for client ws 2
futures-sink = { version = "0.3.7", default-features = false }
#actix-rt = { version = "2.0.0", default-features = false }
actix-rt = "2"
